# AnomalyDetection

./: .gitignore  README.md  README_HR.md  nova_biljeznica.ipynb  pyproject.toml
docs/: plan_projekta.docx  tehnicka.docx
notebooks/: 1EG.ipynb  2EG.ipynb  3EG.ipynb  Grupiranje.ipynb  Temperaturna_analiza.ipynb
