[project]
name = "anomalydetection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "jupyterlab-vim>=4.1.4",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pywavelet>=0.2.8",
    "pywavelets>=1.9.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
